@@ -96,6 +96,12 @@ Other Changes
 
   Fixes part of #3688
 
+* ``undefined-variable`` now correctly triggers for assignment expressions in if ... else statements
+  This includes a basic form of control flow inference for if ... else statements using
+  constant boolean values
+
+  Closes #3688
+
 * Fix double emitting of ``not-callable`` on inferrable ``properties``
 
   Closes #4426
